--- a/index.html
+++ b/index.html
@@ -1,79 +1,47 @@
 <!DOCTYPE html>
-
 <html lang="en">
 <head>
 <title>Connected Voices For Change</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-<link href="layout/styles/layout.css" rel="stylesheet" type="text/css" media="all">
-<link href="layout/styles/images.css" rel="stylesheet" type="text/css" media="all">
+<link href="/layout/styles/layout.css" rel="stylesheet" type="text/css" media="all">
+<link href="/layout/styles/images.css" rel="stylesheet" type="text/css" media="all">
 </head>
 <body id="top">
-
-
-<div class="wrapper overlay row0">
-  <div id="topbar" class="hoc clear">
-    <div class="fl_left"> 
-
-      <ul class="nospace">
-        <li><i class="fas fa-phone"></i> +254717661829
-        </li>
-      </ul>
-      <!-- 
-
-       -->
-    </div>
-    <div class="fl_right"> 
-
-      <ul class="nospace">
-        <li><a href="index.html"><i class="fas fa-home"></i></a></li>
-        <li><a href="#" title="Help Centre"><i class="far fa-life-ring"></i></a></li>
-        <li><a href="#" title="Login"><i class="fas fa-sign-in-alt"></i></a></li>
-        <li><a href="#" title="Sign Up"><i class="fas fa-edit"></i></a></li>
-      </ul>
-      <!-- ################################################################################################ -->
-    </div>
-  </div>
-</div>
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
 <!-- Top Background Image Wrapper -->
-<div class="bgded" style="background-image:url('images/demo/backgrounds/connectedvoicesbg.jpg');"> 
+<div class="bgded" style="background-image:url('/images/demo/backgrounds/connectedvoiceshearder2.png');"> 
   <!-- ################################################################################################ -->
   <div class="wrapper row1">
     <header id="header" class="hoc clear">
       <div id="logo" class="fl_left"> 
         <!-- ################################################################################################ -->
-        <h1 class="logoname"><a href="index.html">CONNECTED<span>VOICES</span></a></h1>
+        <h1 class="logoname"><a href="/index.html">CONNECTED<span>VOICES</span></a></h1>
         <!-- ################################################################################################ -->
       </div>
       <nav id="mainav" class="fl_right"> 
         <!-- ################################################################################################ -->
                     <ul class="clear">
-          <li class="active"><a href="index.html">Home</a></li>
-          <li><a href="pages/full-width.html">EVENTS</a></li>
-          <li><a href="pages/sidebar-left.html">ANNOUNCEMENTS</a></li>
-          <li><a href="https://absg.adventist.org/current-quarter" target="_blank">BLOGS</a></li>
+          <li class="active"><a href="/index.html">Home</a></li>
+          <li><a href="/pages/events.html">EVENTS</a></li>
+          <li><a href="/pages/announcements.html">ANNOUNCEMENTS</a></li>
           <li><a class="drop" href="#">About us</a>
             <ul>
- <li><a href="https://www.adventist.org/who-are-seventh-day-adventists/" target="_blank">Who are We</a></li>
-              <li><a class="drop" href="https://www.adventist.org/beliefs/" target="_blank">Beliefs</a>
-                <ul>
-                  <li><a href="https://www.adventist.org/beliefs/documents/" target="_blank">Documents</a></li>
-                    </ul>
+ <li><a href="/pages/aboutus.html">Who are We</a></li>
+              <li><a href="/pages/aboutus.html">Our Partners</a>
               </li>
-              <li><a href="#"></a></li>
+              <li><a href="/pages/aboutus.html">Meet the Team</a></li>
             </ul>
           </li>
           <li><a class="drop" href="#">Resources</a>
             <ul>
-              <li><a href="pages/gallery.html" target="_blank">Photos&amp;Videos</a></li>              
-              <li><a href="pages/sidebar-right.html">Stewardship</a></li>
-              <li><a href="pages/basic-grid.html" target="_blank">Tenders</a></li>            
+              <li><a href="#" target="_blank">Photos&amp;Videos</a></li>              
+              <li><a href="/pages/research.html">Research & Development</a></li>           
           </ul>
           </li>
-          <li><a href="#">TENDERS</a>
+          <li><a href="/pages/tenders.html" target="_blank">TENDERS</a>
           </li>
           
           
@@ -91,8 +59,8 @@
       <h1 class="heading">All For One</h1>
       <footer>
         <ul class="nospace inline pushright">                     
-              <li><a class="btn" href="pages\gallery.html">INVEST</a></li>
-          <li><a class="btn inverse" href="pages\sidebar-left.html">DONATE</a></li>
+              <li><a class="btn" href="/pages/announcements.html">INVEST</a></li>
+          <li><a class="btn inverse" href="/pages/announcements.html">DONATE</a></li>
         </ul>
       </footer>
     </article>
@@ -151,10 +119,32 @@
       </div>
     </section>
     <!-- ################################################################################################ -->
-    <section id="services">
+    <section id="services"  class="row3 inspace-30 clear">
       <div class="sectiontitle">
         <p class="nospace font-xs">No research without action,no action without research</p>
         <h6 class="heading font-x2">RESEARCH AND DEVELOPMENT</h6>
+      </div>
+        <div class="one_half first left">
+          <h1>(i.) Dancing Molecules</h1>
+          <p>For decades, scientists have looked for an effective treatment for spinal cord injuries, often
+            with little success. New research by Northwestern University scientists has resulted in a
+            game-changing innovation: an injection that uses ​“dancing molecules” to repair spinal tissue
+            and reverse paralysis</p>
+            <img src="/images/demo/gallery/dancingmolecules1.png"/>
+        </div>
+        <div class="one_half right">
+          <h1>(II.) Robotics and AI</h1>
+          <p class="center">Artificial intelligence has tremendous potential in revolutionizing comprehensive spine
+            care. Evidence-based, predictive analytics can help surgeons improve preoperative
+            patient selection, surgical indications, and individualized postoperative care.
+            Robotic-assisted surgery, while still in the early stages of development, has the
+            potential to reduce surgeon fatigue and improve technical precision.</p>
+            <img src="images/demo/gallery/robotics.png"/>
+        </div>
+      <div>
+        <ul class="nospace inline ">
+        <li><a href="/pages/research.html"><button class="btn inverse large">Read More</button></a></li>
+      </ul>
       </div>
     </section>
     <!-- ################################################################################################ -->
@@ -165,7 +155,7 @@
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
-<div class="bgded overlay" style="background-image:url('images/demo/backgrounds/middlepagebg.jpg');">
+<div class="bgded overlay" style="background-image:url('/images/demo/backgrounds/connectedvoicesmiddlebg.png');">
   <section class="hoc container clear"> 
     <!-- ################################################################################################ -->
     <div class="sectiontitle">
@@ -183,7 +173,7 @@
         </article>
       </li>
       <li class="one_half">
-        <article class="center"><a class="imgover btmspace-30" href="#"><img src="images/demo/gallery/building design.jpg" alt=""></a>
+        <article class="center"><a class="imgover btmspace-30" href="#"><img src="/images/demo/gallery/building design.jpg" alt=""></a>
         </article>
       </li>
     </ul>
@@ -200,10 +190,10 @@
       <h6 class="heading font-x3">CONCERT PROMOTION</h6>
       <p>Our launch concert is around the  corner!!</p>
       <p class="btmspace-30">Anything that would promote the concert goes here</p>
-      <footer><a class="btn" href="pages/full-width.html">Read More</a></footer>
+      <footer><a class="btn" href="/pages/aboutus.html">Read More</a></footer>
     </div>
     <div>
-      <img src='./images/demo/gallery/concertposter.png'/>
+      <img src='/images/demo/logos/concertposter.png'/>
     </div>
     <!-- ################################################################################################ -->
   </article>
@@ -222,28 +212,25 @@
         <h6 class="heading center">John Moshe</h6>
         <p class="center">Founder<br>Bio.(More about you in relationto ConnectedVoices)</p>
     </div>
-    <ul>
-      <li class="one_half first">
-        <article><a id="chairmanprofile"class="imgover btmspace-30"></a>
-          <h6 class="heading center">Paul Agonda</h6>
-          <p class="center">Chairman<br>Bio.(More about you in relation to ConnectedVoices)</p>
-        </article>
-      </li>
-      <li class="one_half">
-        <article><a id="blankprofile"class="imgover btmspace-30"></a>
+        <div class="one_half first">
+          <article><p id="chairmanprofile"></p></article>
+            <h6 class="heading center">Paul Agonda</h6>
+            <p class="center">Chairman<br>Bio.(More about you in relationto ConnectedVoices)</p>
+        </div>
+      <div class="one_half">
+        <article><p id="tresurerprofile"class="img btmspace-30"></p>
           <h6 class="heading center">Paul Obop</h6>
-          <p class="center">Tresurer<br>Bio.(More about you in relation to ConnectedVoices)</p>
+          <p class="center">Treasurer<br>Bio.(More about you in relation to ConnectedVoices)</p>
         </article>
-      </li></ul>
-      <ul>
-      <li class="one_half first">
-        <article><a id="headRDprofile"class="imgover btmspace-30"></a>
+      </div>
+      <div class="one_half first">
+        <article><p id="headRDprofile"class="img btmspace-30"></p>
           <h6 class="heading center">Clarence Mang'era</h6>
           <p class="center">Head of Research & Development<br>Bio.(More about you in relation to ConnectedVoices)</p>
         </article>
-      </li>
+      </div>
       <li class="one_half">
-        <article><a id="ExecSecProfile"class="imgover btmspace-30"></a>
+        <article><a id="ExecSecProfile"class="img btmspace-30"></a>
           <h6 class="heading center">Cherryl Gumbo</h6>
           <p class="center">Executive Secretary<br>Bio.(More about you in relation to ConnectedVoices)</p>
         </article>
@@ -255,7 +242,7 @@
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
-<div class="bgded overlay row4" style="background-image:url('images/demo/backgrounds/footerbackground.jpg');">
+<div class="bgded row4" style="background-image:url('images/demo/backgrounds/connectedvoicesfooter2.png');">
   <footer id="footer" class="hoc clear"> 
     <!-- ################################################################################################ -->
     <div class="group">
@@ -316,8 +303,8 @@
 <!-- ################################################################################################ -->
 <a id="backtotop" href="#top"><i class="fas fa-chevron-up"></i></a>
 <!-- JAVASCRIPTS -->
-<script src="layout/scripts/jquery.min.js"></script>
-<script src="layout/scripts/jquery.backtotop.js"></script>
-<script src="layout/scripts/jquery.mobilemenu.js"></script>
+<script src="/layout/scripts/jquery.min.js"></script>
+<script src="/layout/scripts/jquery.backtotop.js"></script>
+<script src="/layout/scripts/jquery.mobilemenu.js"></script>
 </body>
 </html>
