--- a/pages/tenders.html
+++ b/pages/tenders.html
@@ -19,28 +19,6 @@
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
-<div class="wrapper overlay row0">
-  <div id="topbar" class="hoc clear">
-    <div class="fl_left"> 
-      <!-- ################################################################################################ -->
-      <ul class="nospace">
-        <li><i class="fas fa-phone"></i> +254750620012
-        </li>
-      </ul>
-      <!-- ################################################################################################ -->
-    </div>
-    <div class="fl_right"> 
-      <!-- ################################################################################################ -->
-      <ul class="nospace">
-        <li><a href="../index.html"><i class="fas fa-home"></i></a></li>
-        <li><a href="#" title="Help Centre"><i class="far fa-life-ring"></i></a></li>
-        <li><a href="#" title="Login"><i class="fas fa-sign-in-alt"></i></a></li>
-        <li><a href="#" title="Sign Up"><i class="fas fa-edit"></i></a></li>
-      </ul>
-      <!-- ################################################################################################ -->
-    </div>
-  </div>
-</div>
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
@@ -51,7 +29,7 @@
     <header id="header" class="hoc clear">
       <div id="logo" class="fl_left"> 
         <!-- ################################################################################################ -->
-        <h1 class="logoname"><a href="../index.html">Umoja<span>SDA</span></a></h1>
+        <h1 class="logoname"><a href="../index.html">Connected<span>VOICES</span></a></h1>
         <!-- ################################################################################################ -->
       </div>
       <nav id="mainav" class="fl_right"> 
@@ -60,31 +38,11 @@
           <li><a href="../index.html">Home</a></li>
           <li class="active"><a class="drop" href="#">Pages</a>
             <ul class="clear">
-              <li><a href="../index.html">Home</a></li>
-              <li><a href="full-width.html">Camp Meeting 2021</a></li>
-              <li><a href="sidebar-left.html">Announcements</a></li>
-              <li><a href="https://absg.adventist.org/current-quarter" target="_blank">Lessons</a></li>
-              <li><a class="drop" href="#">About us</a>
-                <ul>
+              <li><a href="/index.html">Home</a></li>
+              <li><a href="/pages/events.html">Events</a></li>
+              <li><a href="/pages/announcements.html">Announcements</a></li>
+              <li><a href="/pages/aboutus.html">About Us</a></li>
           </li>
-          <!--<li><a class="drop" href="#">Dropdown</a>
-            <ul>
-              <li><a href="#">Level 2</a></li>
-              <li><a class="drop" href="#">Level 2 + Drop</a>
-                <ul>
-                  <li><a href="#">Level 3</a></li>
-                  <li><a href="#">Level 3</a></li>
-                  <li><a href="#">Level 3</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Level 2</a></li>
-            </ul>
-          </li>
-          <li><a href="#">Link Text</a></li>
-          <li><a href="#">Link Text</a></li>
-          <li><a href="#">Link Text</a></li>
-        </ul> -->
-        <!-- ################################################################################################ -->
       </nav>
     </header>
   </div>
@@ -114,41 +72,41 @@
     <!-- ################################################################################################ -->
     <div class="content"> 
       <!-- ################################################################################################ -->
-      <h2>Church Bus</h2>
+      <h2>VEHICLES</h2>
       <!-- ################################################################################################ -->
       <div class="group btmspace-50 demo">
-        <div class="one_half first">1/2</div>
-        <div class="one_half">1/2</div>
+        <div class="one_half first">Nissan</div>
+        <div class="one_half">Bus</div>
       </div>
       <!-- ################################################################################################ -->
-      <h2>Church Building</h2>
+      <h2>Medical Equipment</h2>
       <!-- ################################################################################################ -->
       <div class="group btmspace-50 demo">
-        <div class="one_quarter first">1/4</div>
-        <div class="one_quarter">1/4</div>
-        <div class="one_quarter">1/4</div>
-        <div class="one_quarter">1/4</div>
+        <div class="one_quarter first">Machine1</div>
+        <div class="one_quarter">Machine2</div>
+        <div class="one_quarter">Machine3</div>
+        <div class="one_quarter">Machine4</div>
       </div>
       <div class="group btmspace-50 demo">
-        <div class="one_quarter first">1/4</div>
-        <div class="one_quarter">1/4</div>
-        <div class="two_quarter">2/4 or 1/2</div>
+        <div class="one_quarter first">Machine5</div>
+        <div class="one_quarter">Machine6</div>
+        <div class="two_quarter">Machine7</div>
       </div>
       <div class="group btmspace-50 demo">
-        <div class="one_quarter first">1/4</div>
-        <div class="three_quarter">3/4</div>
+        <div class="one_quarter first">Machine8</div>
+        <div class="three_quarter">Machine9</div>
       </div>
       <!-- ################################################################################################ -->
       <h2>Umoja Adventist Primary School</h2>
       <!-- ################################################################################################ -->
       <div class="group btmspace-50 demo">
-        <div class="one_third first">1/3</div>
-        <div class="one_third">1/3</div>
-        <div class="one_third">1/3</div>
+        <div class="one_third first">Machine10</div>
+        <div class="one_third">Machine11</div>
+        <div class="one_third">Machine12</div>
       </div>
       <div class="group demo">
-        <div class="one_third first">1/3</div>
-        <div class="two_third">2/3</div>
+        <div class="one_third first">Machine13</div>
+        <div class="two_third">Machine14</div>
       </div>
       <!-- ################################################################################################ -->
     </div>
@@ -160,14 +118,17 @@
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
-<div class="bgded overlay row4" style="background-image:url('../images/demo/backgrounds/pexels-luis-quintero-2351721.jpg');">
+<div class="bgded row4" style="background-image:url('/images/demo/backgrounds/connectedvoicesfooter2.png');">
   <footer id="footer" class="hoc clear"> 
     <!-- ################################################################################################ -->
     <div class="group">
-      <div class="one_quarter first">
-        <h1 class="logoname"><a href="#">Umoja<span>SDA</span></a></h1>
-        <p>Consectetuer et ipsum aliquam sit amet urna fusce ante augue convallis sit amet volutpat ac posuere vel quam nunc sollicitudin tellus ultrices iaculis condimentum felis eros rutrum magna [<a href="#">&hellip;</a>]</p>
+      <div class="one_half first">
+        <h1 class="logoname"><a href="index.html">Connected<span>VOICES</span></a></h1>
+        <p>A short summary  in relation to the  companies that connectedvoices  has patnered with to give patients with spinal
+          cord injury a second chance at healing.
+        </p>
         <ul class="faico clear">
+          <div><p>Below are our social media links. Follow, share, like and subscribe:</p></div>
           <li><a class="faicon-facebook" href="https://web.facebook.com/SDAUmojaNairobi/" target="_blank"><i class="fab fa-facebook"></i></a></li>
           <li><a class="faicon-google-plus" href="#"><i class="fab fa-google-plus-g"></i></a></li>
           <li><a class="faicon-linkedin" href="https://www.instagram.com/sdachurchumoja/?hl=en" target="_blank"><i class="fab fa-instagram"></i></a></li>
@@ -175,35 +136,15 @@
           <li><a class="faicon-vk" href="https://www.youtube.com/user/umojasda/featured" target="_blank"><i class="fab fa-youtube"></i></a></li>
         </ul>
       </div>
-      <div class="one_quarter">
-        <h6 class="heading">FOR BAPTISM</h6>
-        <p class="nospace btmspace-15">Send Us Your Details</p>
-        <form action="#" method="post">
-          <fieldset>
-            <legend>Newsletter:</legend>
-            <input class="btmspace-15" type="text" value="" placeholder="Name">
-            <input class="btmspace-15" type="text" value="" placeholder="Email">
-            <button class="btn" type="submit" value="submit">Submit</button>
-          </fieldset>
-        </form>
-      </div>
-      <div class="one_quarter">
+
+      <div class="one_half">
         <h6 class="heading">USEFUL LINKS</h6>
         <ul class="nospace linklist">
-          <li><a href="http://www.adventistbookcenter.com/sabbath-school-toolbox-yearly-us-subscription.html" target="_blank">SABBATH SCHOOL TOOLBOX</a></li>
-          <li><a href="https://absg.adventist.org/subscribe" target="_blank">ADVENTIST BOOK CENTER</a></li>
-          <li><a href="http://www.whiteestate.org/" target="_blank">ELLEN G. WHITE ESTATE</a></li>
-          <li><a href="http://www.sabbathschoolpersonalministries.org/?_ga=2.158974842.1105063915.1625757546-1801269227.1625234174" target="_blank">COOL TOOLS FOR SABBATH SCHOOL</a></li>
-          <li><a href="https://christianrecord.org/client-services/braille/the-student-braille.html" target="_blank">CHRISTIAN RECORD SERVICES FOR THE BLIND</a></li>
-        </ul>
-      </div>
-      <div class="one_quarter">
-        <h6 class="heading">WHATSAPP GROUPS (Grps 1-25)</h6>
-        <ul class="nospace clear latestimg">
-          <li><a class="imgover" href="#" target="_blank"><img src="../images/demo/WhatsApp-icon-PNG.png" alt=""></a></li>
-          <li><a class="imgover" href="#" target="_blank"><img src="../images/demo/WhatsApp-icon-PNG.png" alt=""></a></li>
-          <li><a class="imgover" href="#" target="_blank"><img src="../images/demo/WhatsApp-icon-PNG.png" alt=""></a></li>
-       
+          <li><a href="http://www.adventistbookcenter.com/sabbath-school-toolbox-yearly-us-subscription.html" target="_blank">NEURAL LINK</a></li>
+          <li><a href="https://absg.adventist.org/subscribe" target="_blank"></a></li>
+          <li><a href="http://www.whiteestate.org/" target="_blank">THE CONNECTION</a></li>
+          <li><a href="http://www.sabbathschoolpersonalministries.org/?_ga=2.158974842.1105063915.1625757546-1801269227.1625234174" target="_blank">LOOK&LIVE MEDIA SERVICES</a></li>
+          <li><a href="https://christianrecord.org/client-services/braille/the-student-braille.html" target="_blank">JM Digital KE</a></li>
         </ul>
       </div>
     </div>
@@ -214,10 +155,10 @@
           <div class="clear"><a href="#"><i class="fas fa-phone"></i></a> <span><strong>Give us a call:</strong> +254750620012</span></div>
         </li>
         <li class="one_third">
-          <div class="clear"><a href="#"><i class="fas fa-envelope"></i></a> <span><strong>Send us a mail:</strong> umosdanai@gmail.com</span></div>
+          <div class="clear"><a href="#"><i class="fas fa-envelope"></i></a> <span><strong>Send us a mail:</strong>connectedvoicesofhope@gmail.com</span></div>
         </li>
         <li class="one_third">
-          <div class="clear"><a href="#"><i class="fas fa-map-marker-alt"></i></a> <span><strong>Come visit us:</strong> Directions to <a href="https://goo.gl/maps/BeFDB7NcCPFj7Jek7" target="_blank">our CHURCH</a></span></div>
+          <div class="clear"><a href="#"><i class="fas fa-map-marker-alt"></i></a> <span><strong>Come visit us:</strong> Directions to <a href="https://goo.gl/maps/BeFDB7NcCPFj7Jek7" target="_blank">our ORGANIZATION</a></span></div>
         </li>
       </ul>
     </figure>
