--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
 <!-- Top Background Image Wrapper -->
-<div class="bgded" style="background-image:url('/images/demo/backgrounds/connectedvoiceshearder2.png');"> 
+<div class="bgded" style="background-image:url('images/demo/backgrounds/connectedvoiceshearder2.png');"> 
   <!-- ################################################################################################ -->
   <div class="wrapper row1">
     <header id="header" class="hoc clear">
@@ -24,24 +24,24 @@
       <nav id="mainav" class="fl_right"> 
         <!-- ################################################################################################ -->
                     <ul class="clear">
-          <li class="active"><a href="/index.html">Home</a></li>
-          <li><a href="/pages/events.html">EVENTS</a></li>
-          <li><a href="/pages/announcements.html">ANNOUNCEMENTS</a></li>
+          <li class="active"><a href="index.html">Home</a></li>
+          <li><a href="pages/events.html">EVENTS</a></li>
+          <li><a href="pages/announcements.html">ANNOUNCEMENTS</a></li>
           <li><a class="drop" href="#">About us</a>
             <ul>
- <li><a href="/pages/aboutus.html">Who are We</a></li>
-              <li><a href="/pages/aboutus.html">Our Partners</a>
+ <li><a href="pages/aboutus.html">Who are We</a></li>
+              <li><a href="pages/aboutus.html">Our Partners</a>
               </li>
-              <li><a href="/pages/aboutus.html">Meet the Team</a></li>
+              <li><a href="pages/aboutus.html">Meet the Team</a></li>
             </ul>
           </li>
           <li><a class="drop" href="#">Resources</a>
             <ul>
               <li><a href="#" target="_blank">Photos&amp;Videos</a></li>              
-              <li><a href="/pages/research.html">Research & Development</a></li>           
+              <li><a href="pages/research.html">Research & Development</a></li>           
           </ul>
           </li>
-          <li><a href="/pages/tenders.html" target="_blank">TENDERS</a>
+          <li><a href="pages/tenders.html" target="_blank">TENDERS</a>
           </li>
           
           
@@ -59,8 +59,8 @@
       <h1 class="heading">All For One</h1>
       <footer>
         <ul class="nospace inline pushright">                     
-              <li><a class="btn" href="/pages/announcements.html">INVEST</a></li>
-          <li><a class="btn inverse" href="/pages/announcements.html">DONATE</a></li>
+              <li><a class="btn" href="pages/announcements.html">INVEST</a></li>
+          <li><a class="btn inverse" href="pages/announcements.html">DONATE</a></li>
         </ul>
       </footer>
     </article>
@@ -130,7 +130,7 @@
             with little success. New research by Northwestern University scientists has resulted in a
             game-changing innovation: an injection that uses ​“dancing molecules” to repair spinal tissue
             and reverse paralysis</p>
-            <img src="/images/demo/gallery/dancingmolecules1.png"/>
+            <img src="images/demo/gallery/dancingmolecules1.png"/>
         </div>
         <div class="one_half right">
           <h1>(II.) Robotics and AI</h1>
@@ -143,7 +143,7 @@
         </div>
       <div>
         <ul class="nospace inline ">
-        <li><a href="/pages/research.html"><button class="btn inverse large">Read More</button></a></li>
+        <li><a href="pages/research.html"><button class="btn inverse large">Read More</button></a></li>
       </ul>
       </div>
     </section>
@@ -155,7 +155,7 @@
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
-<div class="bgded overlay" style="background-image:url('/images/demo/backgrounds/connectedvoicesmiddlebg.png');">
+<div class="bgded overlay" style="background-image:url('images/demo/backgrounds/connectedvoicesmiddlebg.png');">
   <section class="hoc container clear"> 
     <!-- ################################################################################################ -->
     <div class="sectiontitle">
@@ -173,7 +173,7 @@
         </article>
       </li>
       <li class="one_half">
-        <article class="center"><a class="imgover btmspace-30" href="#"><img src="/images/demo/gallery/building design.jpg" alt=""></a>
+        <article class="center"><a class="imgover btmspace-30" href="#"><img src="images/demo/gallery/building design.jpg" alt=""></a>
         </article>
       </li>
     </ul>
@@ -190,10 +190,10 @@
       <h6 class="heading font-x3">CONCERT PROMOTION</h6>
       <p>Our launch concert is around the  corner!!</p>
       <p class="btmspace-30">Anything that would promote the concert goes here</p>
-      <footer><a class="btn" href="/pages/aboutus.html">Read More</a></footer>
+      <footer><a class="btn" href="pages/aboutus.html">Read More</a></footer>
     </div>
     <div>
-      <img src='/images/demo/logos/concertposter.png'/>
+      <img src='images/demo/logos/concertposter.png'/>
     </div>
     <!-- ################################################################################################ -->
   </article>
@@ -303,8 +303,8 @@
 <!-- ################################################################################################ -->
 <a id="backtotop" href="#top"><i class="fas fa-chevron-up"></i></a>
 <!-- JAVASCRIPTS -->
-<script src="/layout/scripts/jquery.min.js"></script>
-<script src="/layout/scripts/jquery.backtotop.js"></script>
-<script src="/layout/scripts/jquery.mobilemenu.js"></script>
+<script src="layout/scripts/jquery.min.js"></script>
+<script src="layout/scripts/jquery.backtotop.js"></script>
+<script src="layout/scripts/jquery.mobilemenu.js"></script>
 </body>
 </html>
