changed the absolute referencing on all the pages

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <li><a class="drop" href="#">Resources</a>
             <ul>
               <li><a href="#" target="_blank">Photos&amp;Videos</a></li>              
-              <li><a href="pages/research.html">Research & Development</a></li>           
+              <li><a href="#">Research & Development</a></li>           
           </ul>
           </li>
           <li><a href="pages/tenders.html" target="_blank">TENDERS</a>
@@ -143,7 +143,7 @@
         </div>
       <div>
         <ul class="nospace inline ">
-        <li><a href="pages/research.html"><button class="btn inverse large">Read More</button></a></li>
+        <li><a href="#"><button class="btn inverse large">Read More</button></a></li>
       </ul>
       </div>
     </section>
