--- a/pages/events.html
+++ b/pages/events.html
@@ -5,44 +5,44 @@
 <title>Camp Meeting 2021</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-<link href="/layout/styles/layout.css" rel="stylesheet" type="text/css" media="all">
+<link href="../layout/styles/layout.css" rel="stylesheet" type="text/css" media="all">
 </head>
 <body id="top">
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
 <!-- Top Background Image Wrapper -->
-<div class="bgded" style="background-image:url('/images/demo/backgrounds/connectedvoiceshearder2.png');"> 
+<div class="bgded" style="background-image:url('../images/demo/backgrounds/connectedvoiceshearder2.png');"> 
   <!-- ################################################################################################ -->
   <div class="wrapper row1">
     <header id="header" class="hoc clear">
       <div id="logo" class="fl_left"> 
         <!-- ################################################################################################ -->
-        <h1 class="logoname"><a href="/index.html">CONNECTED<span>VOICES</span></a></h1>
+        <h1 class="logoname"><a href="../index.html">CONNECTED<span>VOICES</span></a></h1>
         <!-- ################################################################################################ -->
       </div>
       <nav id="mainav" class="fl_right"> 
         <!-- ################################################################################################ -->
                     <ul class="clear">
-          <li class="active"><a href="/index.html">Home</a></li>
-          <li><a href="/pages/events.html">EVENTS</a></li>
-          <li><a href="/pages/announcements.html">ANNOUNCEMENTS</a></li>
+          <li class="active"><a href="../index.html">Home</a></li>
+          <li><a href="events.html">EVENTS</a></li>
+          <li><a href="announcements.html">ANNOUNCEMENTS</a></li>
           <li><a href="#">BLOGS</a></li>
           <li><a class="drop" href="#">About us</a>
             <ul>
- <li><a href="#" target="_blank">Who are We</a></li>
-              <li><a href="#" target="_blank">Our Partners</a>
+ <li><a href="aboutus.html">Who are We</a></li>
+              <li><a href="aboutus.html">Our Partners</a>
               </li>
-              <li><a href="#" target="_blank">Meet the Team</a></li>
+              <li><a href="aboutus.html">Meet the Team</a></li>
             </ul>
           </li>
-          <li><a class="drop" href="#" target="_blank">Resources</a>
+          <li><a class="drop" href="#">Resources</a>
             <ul>
-              <li><a href="pages/gallery.html" target="_blank">Photos&amp;Videos</a></li>              
-              <li><a href="pages/research.html">Research & Development</a></li>           
+              <li><a href="#">Photos&amp;Videos</a></li>              
+              <li><a href="#">Research & Development</a></li>           
           </ul>
           </li>
-          <li><a href="/pages/tenders.html" target="_blank">TENDERS</a>
+          <li><a href="tenders.html" target="_blank">TENDERS</a>
           </li>
           
           
@@ -60,8 +60,8 @@
       <h1 class="heading">All For One</h1>
       <footer>
         <ul class="nospace inline pushright">                     
-              <li><a class="btn" href="pages\gallery.html">INVEST</a></li>
-          <li><a class="btn inverse" href="pages\sidebar-left.html">DONATE</a></li>
+              <li><a class="btn" href="announcements.html">INVEST</a></li>
+          <li><a class="btn inverse" href="announcements.html">DONATE</a></li>
         </ul>
       </footer>
     </article>
