--- a/pages/tenders.html
+++ b/pages/tenders.html
@@ -38,10 +38,10 @@
           <li><a href="../index.html">Home</a></li>
           <li class="active"><a class="drop" href="#">Pages</a>
             <ul class="clear">
-              <li><a href="/index.html">Home</a></li>
-              <li><a href="/pages/events.html">Events</a></li>
-              <li><a href="/pages/announcements.html">Announcements</a></li>
-              <li><a href="/pages/aboutus.html">About Us</a></li>
+              <li><a href="../index.html">Home</a></li>
+              <li><a href="events.html">Events</a></li>
+              <li><a href="announcements.html">Announcements</a></li>
+              <li><a href="aboutus.html">About Us</a></li>
           </li>
       </nav>
     </header>
@@ -118,12 +118,12 @@
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
-<div class="bgded row4" style="background-image:url('/images/demo/backgrounds/connectedvoicesfooter2.png');">
+<div class="bgded row4" style="background-image:url('../images/demo/backgrounds/connectedvoicesfooter2.png');">
   <footer id="footer" class="hoc clear"> 
     <!-- ################################################################################################ -->
     <div class="group">
       <div class="one_half first">
-        <h1 class="logoname"><a href="index.html">Connected<span>VOICES</span></a></h1>
+        <h1 class="logoname"><a href="../index.html">Connected<span>VOICES</span></a></h1>
         <p>A short summary  in relation to the  companies that connectedvoices  has patnered with to give patients with spinal
           cord injury a second chance at healing.
         </p>
