made changes to partners.html

--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -178,7 +178,25 @@
     <!-- ################################################################################################ -->
   </article>
 </div>
-
+<!-- ################################################################################################ -->
+<div class="wrapper row2">
+  <section class="hoc container clear">
+    <div class="sectiontitle">
+      <p class="nospace font-xs">Alone we can do so little; together we can do so much</p>
+      <h6 class="font-x2">OUR PARTNERS</h6>
+    </div>
+    <ul>
+      <li class="one_third first">
+        <img src="../images/demo/logos/jm digital logo.png" alt="jmdigitallogo"/></li>
+        <li class="one_third">
+          <img src="../images/demo/logos/cnctn logo.png" alt="connectedvoiceslogo">
+        </li>
+        <li class="one_third">
+          <a href="https://cybarx.tech" target="_blank"><img src="../images/demo/logos/logo.jpeg" alt="cybarxlogo"/></a>
+        </li>
+    </ul>
+  </section>
+</div>
 <!-- ################################################################################################ -->
 <div class="wrapper row3">
   <section class="hoc container clear"> 
