--- a/pages/tenders.html
+++ b/pages/tenders.html
@@ -53,9 +53,9 @@
     <!-- ################################################################################################ -->
     <h6 class="heading"><p style="color: rgb(14, 129, 236);">Open Tenders</p></h6>
     <ul>
-      <li><a href="https://www.instagram.com/sdachurchumoja/?hl=en" target="_blank"><p style="color: rgb(255, 0, 200);">Instagram</p></a></li>
-      <li><a href="https://www.youtube.com/user/umojasda/featured" target="_blank"><p style="color: rgb(228, 8, 8);">YouTube</p></a></li>
-      <li><a href="https://web.facebook.com/SDAUmojaNairobi/" target="_blank"><p style="color: rgb(0, 17, 255);">FaceBook</p></a></li>
+      <li><a href="#" target="_blank"><p style="color: rgb(255, 0, 200);">Instagram</p></a></li>
+      <li><a href="#" target="_blank"><p style="color: rgb(228, 8, 8);">YouTube</p></a></li>
+      <li><a href="#" target="_blank"><p style="color: rgb(0, 17, 255);">FaceBook</p></a></li>
       <li><a href="../index.html">Home</a></li>
     </ul>
     <!-- ################################################################################################ -->
@@ -97,7 +97,7 @@
         <div class="three_quarter">Machine9</div>
       </div>
       <!-- ################################################################################################ -->
-      <h2>Umoja Adventist Primary School</h2>
+      <h2>Construction Equipment</h2>
       <!-- ################################################################################################ -->
       <div class="group btmspace-50 demo">
         <div class="one_third first">Machine10</div>
