embeded a youtube video

--- a/pages/events.html
+++ b/pages/events.html
@@ -70,32 +70,14 @@
   <!-- ################################################################################################ -->
 </div>
 <!-- End Top Background Image Wrapper -->
-<div class="wrapper row3">
-  <main class="hoc container clear"> 
-    <!-- main body -->
-    <!-- ################################################################################################ -->
-    <div class="content"> 
-      <!-- ################################################################################################ -->
-      <h3 class="center bold">OUR VERY FIRST EVENT</h3> 
-      <h1 class="center">The ConnectedVoices Launch Concert</h1>
-      <img class="imgr borderedbox inspace-5" src="/images/demo/logos/concertposter.png" alt="">
-<p>The Event will also be livestreamed</p>
-          <footer><a class="btn" href="https://youtube.com/playlist?list=PL9nUaPzTCoCNglo72syeTdBCpmjWrB6vt" target="_blank">LIVE STREAM</a></footer>
-        </article>
-        <br>
-        <br>
-
-      <br>
-      <br>
-      <br>
-      </div>
-      <!-- ################################################################################################ -->
-    </div>
     <!-- ################################################################################################ -->
     <!-- / main body -->
     <div class="clear"></div>
   </main>
 </div>
+<div class="center inspace-15 btmspace-15 rgtspace-20">
+  <iframe width="100%" height="315" src="https://www.youtube.com/embed/8I_dw-OxdC0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </div>
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
